feat(carrousel): add category info on slides

--- a/index.html
+++ b/index.html
@@ -111,25 +111,25 @@
           <div class="col-md-10 mt-lg-5 text-center">
             <div class="single-text owl-carousel">
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up" tkey="welcome"></h1>
-                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="cin-ufpe"></p>
+                <h1 class="text-uppercase" data-aos="fade-up" tkey="first-slide-title"></h1>
+                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100" tkey="first-slide-desc"></p>
                 <div data-aos="fade-up" data-aos-delay="100">
                 </div>
               </div>
 
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up" tkey="robotics-team"></h1>
-                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="cin-ufpe"></p>
+                <h1 class="text-uppercase" data-aos="fade-up" tkey="second-slide-title"></h1>
+                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="second-slide-desc"></p>
               </div>
               
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up" tkey="research-and-dev"></h1>
-                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="cin-ufpe"></p>
+                <h1 class="text-uppercase" data-aos="fade-up" tkey="third-slide-title"></h1>
+                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="third-slide-desc"></p>
               </div>
 
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up" tkey="results2021"></h1>
-                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="descResults1" ></p>
+                <h1 class="text-uppercase" data-aos="fade-up" tkey="fourth-slide-title"></h1>
+                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="fourth-slide-desc" ></p>
               </div>
 
 
