--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -164,7 +164,7 @@
                 </tr>
                 <tr>
                   <th scope="row">IRONCup</th>
-                  <td tkey="cat.vss.iron21"></td>
+                  <td ><span class="badge badge-pill badge-warning" tkey="cat.vss.iron21"></span></td>
                   <td tkey="cat.vss.iron20"></td>
                   <td tkey="cat.vss.iron19"></td>
                   <td tkey="cat.vss.iron18"></td>
