feat: new version of seletiva.html

--- a/seletiva.html
+++ b/seletiva.html
@@ -102,10 +102,14 @@
         <section class="site-section bg-light" id="pricing-section">
 
           <div class="jumbotron bg-light" id="j-landing">
-            <h1 class="display-2" id="landing-intro">Bem-vindos à seletiva RobôCIn 2021!</h1>
-            <p class="lead" id="landing-description">O processo seletivo este ano será 100% on-line. Haverão apresentações das equipes pela plataforma do Google Meet durante a semana das inscrições.  
-              Após isso, serão liberados os projetos no site e os inscritos no processo seletivo receberam link para do Classroom para acompanhamento durante esta etapa e posteriormente deverão realizar um apresentação do projeto desenvolvido, finalizando assim o processo seletivo.
-            </p>
+            <h1 class="display-2" style="text-align: center" id="landing-intro">Bem-vindos à seletiva RobôCIn 2022!</h1>
+            <p class="lead" style="text-align: center" id="landing-description">O processo seletivo este an. 
+              Haverão apresentações das equipes no nosso lab ou nos centros que iremos visitar durante a semana das inscrições. 
+              Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
+              posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
+              após isso teremos uma dinâmica em grupo e, assim, finalizando assim o processo seletivo.
+
+            </p>  
           </div> 
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -113,6 +117,7 @@
               <p class="lead">O período de inscrições está aberto! :)</p>
               <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLSdLTr7kfFpU9v5JkwcsdssGh-zOGgWlhy0XSyt9l4v_YKsg2g/viewform" role="button" target="_blank">Formulário</a>
               <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Edital</a>
+              <!-- <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Discord</a> -->
             </div>
           </div>
 
@@ -124,41 +129,84 @@
 
               <div class="row mb-5 justify-content-between">
                 <div class="col-md-4">
-                  <h3 class="text-center" id="info-title">Apresentações</h3>
+                  <h3 class="text-center" id="info-title">Calendario</h3>
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Apresentação geral, Subequipes e SSL
-                      <span class="badge badge-primary badge-pill">08/12</span>
-                      <a href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing" class="nav-link">Acessar</a>
+                      Inscrições
+                      <span class="badge badge-primary badge-pill">01/08 até 14/08</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      VSSS e RL 
-                      <span class="badge badge-primary badge-pill">09/12</span>
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      Visita Meninas
+                      <span class="badge badge-primary badge-pill">04/08</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      2D e Analisador
-                      <span class="badge badge-primary badge-pill">10/12</span>
+                      Visita Geral 1
+                      <span class="badge badge-primary badge-pill">05/08</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Visita Geral 2
+                      <span class="badge badge-primary badge-pill">09/08</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Visita no CTG
+                      <span class="badge badge-primary badge-pill">10/08</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Visita no CAC
+                      <span class="badge badge-primary badge-pill">11/08</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Visita na Area 2
+                      <span class="badge badge-primary badge-pill">12/08</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Projeto Individual
+                      <span class="badge badge-primary badge-pill">15/08 até 29/08</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Apresentação de Projetos
+                      <span class="badge badge-primary badge-pill">03/09</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Dinâmica em grupo
+                      <span class="badge badge-primary badge-pill">09/09 e 10/09</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Resultado final
+                      <span class="badge badge-primary badge-pill">entre 19/09 e 22/09</span>
                     </li>
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <h3 class="text-center" id="info-title">Projeto</h3>
+                  <h3 class="text-center" id="info-title">Projetos</h3>
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Descrição dos projetos
-                      <span class="badge badge-primary badge-pill">03/01</span>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Acompanhamento parcial dos projetos
-                      <span class="badge badge-primary badge-pill">12/01 e 19/01</span>
+                      Eletrônica
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Apresentação dos projetos
-                      <span class="badge badge-primary badge-pill">28/01</span>
+                      Comunicação
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Resultado final
-                      <span class="badge badge-primary badge-pill">31/01</span>
+                      Software
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Mecânica
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Embarcados
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Drone
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      2D
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
                     </li>
                   </ul>
                 </div>
