fix: header text.

--- a/seletiva.html
+++ b/seletiva.html
@@ -103,7 +103,7 @@
 
           <div class="jumbotron bg-light" id="j-landing">
             <h1 class="display-2" style="text-align: center" id="landing-intro">Bem-vindos à seletiva RobôCIn 2022!</h1>
-            <p class="lead" style="text-align: center" id="landing-description">O processo seletivo este an. 
+            <p class="lead" style="text-align: center" id="landing-description">O processo seletivo este ano será 100% presencial. 
               Haverão apresentações das equipes no nosso lab ou nos centros que iremos visitar durante a semana das inscrições. 
               Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
               posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
