fix: text in header 2

--- a/seletiva.html
+++ b/seletiva.html
@@ -107,7 +107,7 @@
               Haverão apresentações das equipes no nosso lab ou nos centros que iremos visitar durante a semana das inscrições. 
               Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
               posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
-              após isso teremos uma dinâmica em grupo e, assim, finalizando assim o processo seletivo.
+              após isso teremos uma dinâmica em grupo e, assim, finalizando o processo seletivo.
 
             </p>  
           </div> 
