feat: added faq to the page

--- a/seletiva.html
+++ b/seletiva.html
@@ -211,6 +211,132 @@
                   </ul>
                 </div>
               </div>
+
+              <div class="col-12 text-center" data-aos="fade-up">
+                <h2 class="section-title mb-3" id="info">Perguntas Frequentes</h2>
+              </div>
+              <div class="row mb-5 justify-content-between">
+                <div style="width: 100%;">
+                  <ul style="display:inline-block" class="list-group">
+                    <li>
+                    <b>
+                      Estou no começo do curso e não possuo conhecimento na área, consigo participar?
+                    </b>
+                    <p>
+                      R: Sim.
+
+                    </p>
+                    </li>
+                    <li>
+                      <b>
+                        Estou no ensino superior mas não faço parte da UFPE, posso me inscrever?
+                      </b>
+                      <p>
+                        R: Infelizmente não..
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        O projeto envolve bolsa?
+                      </b>
+                      <p>
+                        R: O RobôCIn não oferece bolsa para membros da equipe. Entretanto, é possível desenvolver projetos de pesquisa e iniciação científica dentro da equipe com os professores orientadores que podem concorrer a bolsas em órgãos de incentivo.
+                      </p>
+                    </li>         
+                    <li>
+                      <b>
+                        Quantas vagas temos?
+                      </b>
+                      <p>
+                        R: Não temos um número fixo de vagas, vai depender do desempenho dos candidatos e da demanda da equipe.          
+                      </p>
+                    </li> 
+                    <li>
+                      <b>
+                        Quais são as áreas de atuação?
+                      </b>
+                      <p>
+                        R: Temos a área Administrativa, Comunicação, Mecânica, Eletrônica, Embarcados e Software.          
+                      </p>
+                    </li> 
+                    <li>
+                      <b>
+                        Escolhi na inscrição que queria fazer parte da área X, posso fazer um projeto da área Y?
+                      </b>
+                      <p>
+                        R: Não, escolhemos ter um projeto de cada área com a finalidade de suprirmos as necessidades da equipe. A robótica envolve diversos conhecimentos, levando cada membro trabalhar em diversas áreas com o tempo, mas temos a expectativa que, caso ingresse no RobôCIn, o candidato irá inicialmente trabalhar na área escolhida.          
+                      </p>
+                    </li> 
+                    <li>
+                      <b>
+                        O projeto tem carga horária obrigatória?
+                      </b>
+                      <p>
+                        R: Somos bem flexíveis quanto ao horário, pois existem semanas de provas e projetos, mas tentamos manter 2 turnos de dedicação por semana.          
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        A partir de qual período posso me inscrever?
+                      </b>
+                      <p>
+                        R: Aceitamos alunos de qualquer período, sendo assim não existe nenhuma restrição.          
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        Estou no primeiro período e ainda não tenho média geral, o que faço?
+                      </b>
+                      <p>
+                        R: Preencha a média geral com nota 0.
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        Fiz transferência interna, qual média e histórico devo informar?
+                      </b>
+                      <p>
+                        R: A do seu curso atual.
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        Meu período letivo na UFPE ainda não iniciou por conta do atraso causado pela pandemia, posso me inscrever?
+                      </b>
+                      <p>
+                        R: Sim, no formulário de inscrição no campo de nota preencha 0.
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        Como funciona o processo seletivo?
+                      </b>
+                      <p>
+                        R: O processo seletivo é dividido em 3 fases: inscrição, desenvolvimento e apresentação do projeto e dinâmica em grupo. Iremos avaliar a pessoa candidata a partir das informações fornecidas na inscrição, a sua participação e engajamento no desenvolvimento do projeto e também pelo seu empenho e relacionamento com outras pessoas na dinâmica de grupo.
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        Como faço para entrar no discord da seletiva?
+                      </b>
+                      <p>
+                        R: Fique atento ao seu e-mail fornecido no formulário de inscrição, lhe enviaremos o convite por ele.
+                      </p>
+                    </li>
+                    <li>
+                      <b>
+                        Como sei se fui aprovado(a) ou não?
+                      </b>
+                      <p>
+                        R: Fique atento ao seu e-mail fornecido no formulário de inscrição, lhe enviaremos o resultado por ele.
+                      </p>
+                    </li>
+                    <!-- <li class="list-group-item d-flex justify-content-between align-items-center"> -->
+                      
+                    <!-- </li> -->
+                  </ul>
+                </div>
+              </div>
             </div>
                 <!--
                 <div class="col-md-4">
