--- a/seletiva.html
+++ b/seletiva.html
@@ -107,7 +107,7 @@
               Haverão apresentações das equipes no nosso lab ou nos centros que iremos visitar durante a semana das inscrições. 
               Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
               posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
-              após isso teremos uma dinâmica em grupo e, assim, finalizando o processo seletivo.
+              após isso teremos uma dinâmica em grupo e entrevista, finalizando, assim, nosso processo seletivo.
 
             </p>  
           </div> 
@@ -182,31 +182,31 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Eletrônica
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Comunicação
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Software
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Mecânica
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Embarcados
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Drone
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       2D
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
                     </li>
                   </ul>
                 </div>
@@ -223,8 +223,7 @@
                       Estou no começo do curso e não possuo conhecimento na área, consigo participar?
                     </b>
                     <p>
-                      R: Sim.
-
+                      R: Sim!
                     </p>
                     </li>
                     <li>
@@ -232,7 +231,7 @@
                         Estou no ensino superior mas não faço parte da UFPE, posso me inscrever?
                       </b>
                       <p>
-                        R: Infelizmente não..
+                        R: Infelizmente não.
                       </p>
                     </li>
                     <li>
@@ -248,7 +247,7 @@
                         Quantas vagas temos?
                       </b>
                       <p>
-                        R: Não temos um número fixo de vagas, vai depender do desempenho dos candidatos e da demanda da equipe.          
+                        R: Não temos um número fixo de vagas, vai depender do desempenho das pessoas candidatas e da demanda da equipe.
                       </p>
                     </li> 
                     <li>
@@ -256,7 +255,7 @@
                         Quais são as áreas de atuação?
                       </b>
                       <p>
-                        R: Temos a área Administrativa, Comunicação, Mecânica, Eletrônica, Embarcados e Software.          
+                        R: Temos as áreas de Comunicação, Mecânica, Eletrônica, Embarcados e Software.
                       </p>
                     </li> 
                     <li>
@@ -264,7 +263,7 @@
                         Escolhi na inscrição que queria fazer parte da área X, posso fazer um projeto da área Y?
                       </b>
                       <p>
-                        R: Não, escolhemos ter um projeto de cada área com a finalidade de suprirmos as necessidades da equipe. A robótica envolve diversos conhecimentos, levando cada membro trabalhar em diversas áreas com o tempo, mas temos a expectativa que, caso ingresse no RobôCIn, o candidato irá inicialmente trabalhar na área escolhida.          
+                        R: Não, escolhemos ter um projeto de cada área com a finalidade de suprirmos as necessidades da equipe. A robótica envolve diversos conhecimentos, levando cada membro trabalhar em diversas áreas com o tempo, mas temos a expectativa que, caso ingresse no RobôCIn, a pessoa candidata irá inicialmente trabalhar na área escolhida.
                       </p>
                     </li> 
                     <li>
@@ -272,7 +271,7 @@
                         O projeto tem carga horária obrigatória?
                       </b>
                       <p>
-                        R: Somos bem flexíveis quanto ao horário, pois existem semanas de provas e projetos, mas tentamos manter 2 turnos de dedicação por semana.          
+                        R: Somos bem flexíveis quanto ao horário, pois existem semanas de provas e projetos, mas tentamos manter 2 turnos de dedicação por semana.
                       </p>
                     </li>
                     <li>
@@ -280,7 +279,7 @@
                         A partir de qual período posso me inscrever?
                       </b>
                       <p>
-                        R: Aceitamos alunos de qualquer período, sendo assim não existe nenhuma restrição.          
+                        R: Aceitamos alunos de qualquer período, sendo assim não existe nenhuma restrição.
                       </p>
                     </li>
                     <li>
@@ -288,7 +287,7 @@
                         Estou no primeiro período e ainda não tenho média geral, o que faço?
                       </b>
                       <p>
-                        R: Preencha a média geral com nota 0.
+                        R: Preencha a média geral com nota 0. No caso do histórico escolar pode colocar o PDF do histórico atual só com as cadeiras do período atual.
                       </p>
                     </li>
                     <li>
@@ -304,7 +303,7 @@
                         Meu período letivo na UFPE ainda não iniciou por conta do atraso causado pela pandemia, posso me inscrever?
                       </b>
                       <p>
-                        R: Sim, no formulário de inscrição no campo de nota preencha 0.
+                        R: Sim, no formulário de inscrição no campo de nota preencha 0. E no histórico é necessário colocar o comprovante de matrícula.
                       </p>
                     </li>
                     <li>
@@ -312,7 +311,7 @@
                         Como funciona o processo seletivo?
                       </b>
                       <p>
-                        R: O processo seletivo é dividido em 3 fases: inscrição, desenvolvimento e apresentação do projeto e dinâmica em grupo. Iremos avaliar a pessoa candidata a partir das informações fornecidas na inscrição, a sua participação e engajamento no desenvolvimento do projeto e também pelo seu empenho e relacionamento com outras pessoas na dinâmica de grupo.
+                        R: O processo seletivo é dividido em 4 fases: inscrição, projeto individual, dinâmica em grupo e entrevista. Iremos avaliar a pessoa candidata a partir das informações fornecidas na inscrição, a sua participação e engajamento no desenvolvimento do projeto individual, pelo seu empenho na dinâmica de grupo e também pelo alinhamento na entrevista.
                       </p>
                     </li>
                     <li>
@@ -334,6 +333,17 @@
                     <!-- <li class="list-group-item d-flex justify-content-between align-items-center"> -->
                       
                     <!-- </li> -->
+                  </ul>
+                  <p>
+                    Ficou com alguma dúvida que não foi respondida? Entrar em contato com a gente!
+                  </p>
+                  <ul>
+                    <li>
+                      Instagram: @robocinufpe
+                    </li>
+                    <li>
+                      gmail: robocin@cin.ufpe.br
+                    </li>
                   </ul>
                 </div>
               </div>
