feat: fix footer

--- a/seletiva.html
+++ b/seletiva.html
@@ -99,7 +99,7 @@
           </div>-->
         </header>
         
-        <section class="site-section bg-light" id="pricing-section">
+        <section class="site-section bg-light" id="pricing-section" style="height: 100%; padding: 0%;padding-top:2%;">
 
           <div class="jumbotron bg-light" id="j-landing">
             <h1 class="display-2" style="text-align: center" id="landing-intro">Bem-vindos à seletiva RobôCIn 2022!</h1>
@@ -497,14 +497,14 @@
             </div>
         </section>-->
 
-        <footer class="site-footer">
+        <footer class="site-footer" style="height: 100%">
           <div class="container text-center">
             <div class="row mb-5">
               <div class="col-12 text-center" data-aos="fade">
                 <h2 id="footer-title" class="section-title mb-3" tkey="pat"></h2>
               </div>
             </div>
-            <div class="wrapper" style="">
+            <div class="wrapper" style="height: 100%;">
               
                 <div class="unit-4-icon text-center box a" style="">
                   <img id="cin-img" src="images/cin.png" class="img-fluid md-4" width="20%">
