fix: changed text in header

--- a/seletiva.html
+++ b/seletiva.html
@@ -104,11 +104,10 @@
           <div class="jumbotron bg-light" id="j-landing">
             <h1 class="display-2" style="text-align: center" id="landing-intro">Bem-vindos à seletiva RobôCIn 2022!</h1>
             <p class="lead" style="text-align: center" id="landing-description">O processo seletivo este ano será 100% presencial. 
-              Haverão apresentações das equipes no nosso lab ou nos centros que iremos visitar durante a semana das inscrições. 
+              Haverão apresentações das equipes no nosso laboratório ou nos centros que iremos visitar durante a semana das inscrições. 
               Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
               posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
               após isso teremos uma dinâmica em grupo e entrevista, finalizando, assim, nosso processo seletivo.
-
             </p>  
           </div> 
           <div class="jumbotron jumbotron-fluid">
@@ -206,7 +205,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       2D
-                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
                     </li>
                   </ul>
                 </div>
