fix: fixed projects names and fixed css

--- a/seletiva.html
+++ b/seletiva.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/ps.css">
 
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 
@@ -66,7 +67,7 @@
                     <li class="has-children">
                       <a tkey="categ"></a>
                       <ul class="dropdown">
-                        <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li>
+                        <!-- <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li> -->
                         <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="cat.ssl"></a></li>
                         <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="cat.vss"></a></li>
                         <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
@@ -103,19 +104,23 @@
 
           <div class="jumbotron bg-light" id="j-landing">
             <h1 class="display-2" style="text-align: center" id="landing-intro">Bem-vindos à seletiva RobôCIn 2022!</h1>
-            <p class="lead" style="text-align: center" id="landing-description">O processo seletivo este ano será 100% presencial. 
-              Haverão apresentações das equipes no nosso laboratório ou nos centros que iremos visitar durante a semana das inscrições. 
-              Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
-              posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
-              após isso teremos uma dinâmica em grupo e entrevista, finalizando, assim, nosso processo seletivo.
-            </p>  
+            <div class="s" style="margin: auto;">
+              <p class="col-md-1; lead" style="text-align: center;" id="landing-description">
+                O processo seletivo este ano será 100% presencial. 
+                Haverão apresentações das equipes no nosso laboratório(preencham o formulário para termos noção de lotação da sala) ou nos centros que iremos visitar durante a semana das inscrições. 
+                Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
+                posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
+                após isso teremos uma dinâmica em grupo e entrevista, finalizando, assim, nosso processo seletivo.
+            </p> 
+            </div>
           </div> 
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Inscreva-se!</h1>
               <p class="lead">O período de inscrições está aberto! :)</p>
-              <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLSdLTr7kfFpU9v5JkwcsdssGh-zOGgWlhy0XSyt9l4v_YKsg2g/viewform" role="button" target="_blank">Formulário</a>
-              <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Edital</a>
+              <a class="btn btn-secondary" href="https://forms.gle/EB6NN29S77F1Wy417" role="button" target="_blank">Formulário de inscrição</a>
+              <a class="btn btn-secondary" href=" https://forms.gle/FayXCZ1zmWzXatE8A" role="button" target="_blank">Formulário para visita</a>
+              <a class="btn btn-secondary" href="https://robocin.com.br/archives/ps/Edital_Processo_Seletivo_RoboCIn_2022.pdf" role="button" target="_blank">Edital</a>
               <!-- <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Discord</a> -->
             </div>
           </div>
@@ -136,27 +141,27 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visita Meninas
-                      <span class="badge badge-primary badge-pill">04/08</span>
+                      <span class="badge badge-primary badge-pill">04/08 das 10h às 11h</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visita Geral 1
-                      <span class="badge badge-primary badge-pill">05/08</span>
+                      <span class="badge badge-primary badge-pill">05/08 das 10h às 11h</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visita Geral 2
-                      <span class="badge badge-primary badge-pill">09/08</span>
+                      <span class="badge badge-primary badge-pill">09/08 das 13h às 14h</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visita no CTG
-                      <span class="badge badge-primary badge-pill">10/08</span>
+                      <span class="badge badge-primary badge-pill">10/08 das 10h às 12h</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visita no CAC
-                      <span class="badge badge-primary badge-pill">11/08</span>
+                      <span class="badge badge-primary badge-pill">11/08 das 10h às 11h</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visita na Area 2
-                      <span class="badge badge-primary badge-pill">12/08</span>
+                      <span class="badge badge-primary badge-pill">12/08 das 10h às 12h</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Projeto Individual
@@ -171,6 +176,10 @@
                       <span class="badge badge-primary badge-pill">09/09 e 10/09</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Entrevista individual
+                      <span class="badge badge-primary badge-pill">11/09 e 18/09</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
                       Resultado final
                       <span class="badge badge-primary badge-pill">entre 19/09 e 22/09</span>
                     </li>
@@ -180,32 +189,32 @@
                   <h3 class="text-center" id="info-title">Projetos</h3>
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Eletrônica
-                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
                       Comunicação
-                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Software
-                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Mecânica
-                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Embarcados
-                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Drone
-                      <!-- <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a> -->
+                      <a href="https://robocin.com.br/archives/ps/Drones_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      2D
-                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
+                      Eletrônica
+                      <a href="https://robocin.com.br/archives/ps/Eletronica_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Embarcados
+                      <a href="https://robocin.com.br/archives/ps/Embarcados_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Mecânica
+                      <!-- <a href="https://robocin.com.br/archives/ps/" class="nav-link">Acessar</a> -->
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Software 2D
+                      <a href="https://robocin.com.br/archives/ps/Software_2D_Individual_Processo_Seletivo_2022" class="nav-link">Acessar</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Software SSL/VSS
+                      <a href="https://robocin.com.br/archives/ps/Software_VSS_SSL_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
                     </li>
                   </ul>
                 </div>
@@ -518,7 +527,7 @@
                 </div>  
               
                 <div class="unit-4-icon text-center box d">
-                  <img id="cin-img" src="images/hsbs.png" class="img-fluid md-4" width="20%">
+                  <img id="cin-img" src="images/hsbs.png" class="img-fluid md-4" width="13%">
                 </div>  
               
                 <div class="unit-4-icon text-center box e">
