feat: added tag to mecanica project

--- a/seletiva.html
+++ b/seletiva.html
@@ -206,6 +206,8 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Mecânica
+                      <span class="badge badge-primary badge-pill">Em breve</span>
+
                       <!-- <a href="https://robocin.com.br/archives/ps/" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
