fix: microsoft logo and hsbs and text in the header

--- a/seletiva.html
+++ b/seletiva.html
@@ -108,8 +108,8 @@
               <p class="col-md-1; lead" style="text-align: center;" id="landing-description">
                 O processo seletivo este ano será 100% presencial. 
                 Haverão apresentações das equipes no nosso laboratório(preencham o formulário para termos noção de lotação da sala) ou nos centros que iremos visitar durante a semana das inscrições. 
-                Após isso, serão liberados os projetos no site e os inscritos no processo seletivo devem entrar no nosso discord para o acompanhamento que ocorrerá durante essa etapa e, 
-                posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
+                Após isso, os inscritos no processo seletivo receberão o  convite para um servidor no Discord para o acompanhamento que ocorrerá durante essa etapa e, também, para receber os avisos durante todo o processo seletivo.
+                Posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
                 após isso teremos uma dinâmica em grupo e entrevista, finalizando, assim, nosso processo seletivo.
             </p> 
             </div>
@@ -521,7 +521,7 @@
                 </div>  
               
                 <div class="unit-4-icon text-center box b">
-                  <img id="cin-img" src="images/microsoftlogo.png" class="img-fluid md-4" width="20%">
+                  <img id="cin-img" src="images/microsoft.png" class="img-fluid md-4" width="20%" style="margin-top: 2.1rem;">
                 </div>  
               
                 <div class="unit-4-icon text-center box c">
