--- a/seletiva.html
+++ b/seletiva.html
@@ -177,7 +177,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Entrevista individual
-                      <span class="badge badge-primary badge-pill">11/09 e 18/09</span>
+                      <span class="badge badge-primary badge-pill">11/09 até 18/09</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Resultado final
