--- a/seletiva.html
+++ b/seletiva.html
@@ -107,7 +107,7 @@
             <h1 class="display-2" style="text-align: center" id="landing-intro">Bem-vindos à seletiva RobôCIn 2022!</h1>
               <p class="col-md-1; lead" style="text-align: center;" id="landing-description">
                 O processo seletivo este ano será 100% presencial. 
-                Haverão apresentações das equipes no nosso laboratório(preencham o formulário para termos noção de lotação da sala) ou nos centros que iremos visitar durante a semana das inscrições. 
+                Haverão apresentações das equipes no nosso laboratório e visita nos centros durante as semanas das inscrições. Para participar da visita a sala do RobôCIn, por favor preeencha o formário de visita, para termos noção de quantas pessoas irão visitar e assim respeitarmos o limite da nossa sala.
                 Após isso, os inscritos no processo seletivo receberão o  convite para um servidor no Discord para o acompanhamento que ocorrerá durante essa etapa e, também, para receber os avisos durante todo o processo seletivo.
                 Posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
                 após isso teremos uma dinâmica em grupo e entrevista, finalizando, assim, nosso processo seletivo.
