--- a/seletiva.html
+++ b/seletiva.html
@@ -108,7 +108,7 @@
               <p class="col-md-1; lead" style="text-align: center;" id="landing-description">
                 O processo seletivo este ano será 100% presencial. 
                 Haverão apresentações das equipes no nosso laboratório e visita nos centros durante as semanas das inscrições. Para participar da visita a sala do RobôCIn, por favor preeencha o formário de visita, para termos noção de quantas pessoas irão visitar e assim respeitarmos o limite da nossa sala.
-                Após isso, os inscritos no processo seletivo receberão o  convite para um servidor no Discord para o acompanhamento que ocorrerá durante essa etapa e, também, para receber os avisos durante todo o processo seletivo.
+                Após a inscrição, os inscritos receberão o convite para um servidor no Discord para o acompanhamento do Projeto Individual. Esse servidor também servirá para como comunicação com a equipe durante todo o processo seletivo. Esse projeto será apresentado para a equipe na data definida no Edital. 
                 Posteriormente, deverão realizar um apresentação do projeto desenvolvido, 
                 após isso teremos uma dinâmica em grupo e entrevista, finalizando, assim, nosso processo seletivo.
             </p> 
