--- a/seletiva.html
+++ b/seletiva.html
@@ -210,7 +210,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Software 2D
-                      <a href="https://robocin.com.br/archives/ps/Software_2D_Individual_Processo_Seletivo_2022" class="nav-link">Acessar</a>
+                      <a href="https://robocin.com.br/archives/ps/Software_2D_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Software SSL/VSS
