--- a/seletiva.html
+++ b/seletiva.html
@@ -204,9 +204,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Mecânica
-                      <span class="badge badge-primary badge-pill">Em breve</span>
-
-                      <!-- <a href="https://robocin.com.br/archives/ps/" class="nav-link">Acessar</a> -->
+                      <a href="https://robocin.com.br/archives/psi/Mecânica_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Software 2D
@@ -514,7 +512,7 @@
             </div>
             <div class="wrapper" style="height: 100%;">
               
-                <div class="unit-4-icon text-center box a" style="">
+                <div class="unit-4-icon text-center box a">
                   <img id="cin-img" src="images/cin.png" class="img-fluid md-4" width="20%">
                 </div>  
               
