--- a/seletiva.html
+++ b/seletiva.html
@@ -204,7 +204,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Mecânica
-                      <a href="https://robocin.com.br/archives/psi/Mecânica_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      <a href="https://robocin.com.br/archives/ps/Mecânica_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Software 2D
